# ESAMR

./: CMakeLists.txt  README.md  build_script.sh
include/: RefactorUtils.hpp  codec_utils.hpp  data_enc.hpp  data_enc_opt.hpp  decode.hpp  encode.hpp  error_est.hpp  lossless.hpp  refactor.hpp
include/BitplaneEncoder/: BitplaneEncoder.hpp  BitplaneEncoderInterface.hpp  GroupedBPEncoder.hpp  NegaBinaryBPEncoder.hpp  PerBitBPEncoder.hpp  WeightedPerBitBPEncoder.hpp
include/Decomposer/: MGARD.hpp
include/ErrorCollector/: ErrorCollector.hpp  SNormErrorCollector.hpp
include/ErrorEstimator/: ErrorEstimator.hpp  ErrorEstimatorInterface.hpp  MaxErrorEstimator.hpp  SNormErrorEstimator.hpp  SquaredErrorEstimator.hpp
include/IO/: IO.hpp  IOInterface.hpp
include/Interleaver/: DirectInterleaver.hpp  Interleaver.hpp  SFCInterleaver.hpp
include/LosslessCompressor/: AdaptiveLevelCompressor.hpp  DefaultLevelCompressor.hpp  LevelCompressor.hpp  LevelCompressorInterface.hpp  LosslessCompressorInterface.hpp  NullLevelCompressor.hpp  NullLosslessCompressor.hpp  ZSTD.hpp
include/Reconstructor/: AdaptiveReconstructor.hpp  ComposedReconstructor.hpp  Reconstructor.hpp  ReconstructorInterface.hpp
include/Refactor/: AdaptiveRefactor.hpp  ComposedRefactor.hpp  Refactor.hpp  RefactorInterface.hpp
include/Retriever/: FileRetriever.hpp  GeneralRetriever.hpp  HPSSFileRetriever.hpp  Retriever.hpp  RetrieverInterface.hpp
include/SizeInterpreter/: BasicSizeInterpreter.hpp  GreedyBasedSizeInterpreter.hpp  SizeInterpreter.hpp
include/Writer/: FileWriter.hpp  HPSSFileWriter.hpp  Writer.hpp  WriterInterface.hpp
misc/: environment.txt
others/: CMakeLists.txt  parallel_mgard.cpp  parallel_sz.cpp  parallel_zfp.cpp
test/: CMakeLists.txt  Synthesizer4GE.hpp  test_bitplane_encoding.cpp  test_decomposer.cpp  test_encoder.cpp  test_error_collector.cpp  test_ge.cpp  test_reconstructor.cpp  test_refactor.cpp  test_retriever.cpp  test_weight_propagation.cpp
